feat: refactor the functions to work with frontend